--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -136,3 +136,14 @@ form, form div { display: inline; }
 .hashtag {
 	font-weight: bold;
 }
+.panel {
+margin-bottom: 20px;
+background-color: #FFF;
+/* border: 1px solid rgba(0, 0, 0, 0); */
+border-radius: 4px;
+webkit-box-shadow: 0px 2px 10px 0 rgba(0, 0, 0, 0.2);
+box-shadow: 0px 2px 10px 0 rgba(0, 0, 0, 0.2);
+-webkit-animation: ozShareboxSlide .5s ease-out;
+animation: ozShareboxSlide .5s ease-out;
+transition: left .4s cubic-bezier(0.175,0.885,0.320,1.275),width .4s ease,padding .4s ease,box-shadow .4s ease,margin .4s ease,border .4s ease;
+}
